Adição de conversa com elastic

--- a/engine/Dockerfile
+++ b/engine/Dockerfile
@@ -1,14 +1,14 @@
 # Use uma imagem base leve do Linux
 FROM alpine:latest
 
+# Instale o compilador C, a biblioteca de desenvolvimento do curl e o utilitário curl no container
+RUN apk update && apk add gcc libc-dev curl-dev curl
+
 # Copie o arquivo do código C para o container
 COPY jogoVidaOMP.c /app/
 
-# Instale o compilador C no container
-RUN apk update && apk add gcc libc-dev
-
 # Compile o código C e gere o binário do servidor
-RUN gcc -o /app/jogoVidaOMP /app/jogoVidaOMP.c -lpthread -fopenmp
+RUN gcc -o /app/jogoVidaOMP /app/jogoVidaOMP.c -lpthread -fopenmp -lcurl
 
 # Defina o diretório de trabalho
 WORKDIR /app
