--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -97,6 +97,29 @@ spec:
           ports:
             - containerPort: 8888
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: spark-app
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: spark-app
+  template:
+    metadata:
+      labels:
+        app: spark-app
+    spec:
+      containers:
+        - name: spark-app
+          image: docker.io/washingtonbispo/pspd-spark:latest
+          ports:
+            - containerPort: 7071  # Substitua pela porta do Spark Web UI, se necessário
+          env:
+            - name: SPARK_MASTER_URL
+              value: "spark://spark-master:7077"
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -148,4 +171,17 @@ spec:
     - protocol: TCP
       port: 8888
       targetPort: 8888
+  type: LoadBalancer
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: spark-app
+spec:
+  selector:
+    app: spark-app
+  ports:
+    - protocol: TCP
+      port: 7071
+      targetPort: 7071
   type: LoadBalancer
